--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -217,6 +217,7 @@ allow 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 allow 2605:6400:30:f414:42ce:c612:dab8:1337;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
+allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 allow 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 allow 2605:6400:30:f503::1;
 allow 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
@@ -377,7 +378,6 @@ allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a04:9dc0:31::c0cc:73;
 allow 2a04:9dc0:31::c0cc:fb;
 allow 2a05:541:110:20::1;
@@ -412,22 +412,6 @@ allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
-allow 2a0b:f4c0:16c:10::1;
-allow 2a0b:f4c0:16c:1::1;
-allow 2a0b:f4c0:16c:11::1;
-allow 2a0b:f4c0:16c:12::1;
-allow 2a0b:f4c0:16c:13::1;
-allow 2a0b:f4c0:16c:14::1;
-allow 2a0b:f4c0:16c:15::1;
-allow 2a0b:f4c0:16c:16::1;
-allow 2a0b:f4c0:16c:2::1;
-allow 2a0b:f4c0:16c:3::1;
-allow 2a0b:f4c0:16c:4::1;
-allow 2a0b:f4c0:16c:5::1;
-allow 2a0b:f4c0:16c:6::1;
-allow 2a0b:f4c0:16c:7::1;
-allow 2a0b:f4c0:16c:8::1;
-allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
@@ -591,6 +575,7 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3ea:372::1;
+allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
