--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
@@ -129,7 +130,6 @@ deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
 deny 2602:f9f3:0:2::8d;
 deny 2602:f9f3:0:2::91;
-deny 2602:fc24:12:77c0::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:19:1c9::1;
