--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -114,6 +114,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
@@ -149,7 +150,6 @@ allow 146.70.164.210;
 allow 147.45.116.145;
 allow 147.45.49.17;
 allow 147.45.78.34;
-allow 149.202.32.9;
 allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.22.133;
@@ -719,6 +719,7 @@ allow 2001:620:20d0::20;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
+allow 2001:678:6d4:5130::2;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
@@ -795,6 +796,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -887,6 +889,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -910,6 +913,7 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1396,7 +1400,6 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.212.37.7;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1506,6 +1509,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.200.133.192;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.103.190;
@@ -1600,7 +1604,6 @@ allow 82.153.138.24;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
@@ -1651,6 +1654,7 @@ allow 91.132.144.59;
 allow 91.139.160.150;
 allow 91.202.5.104;
 allow 91.206.26.26;
+allow 91.208.206.47;
 allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
